--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }
 byteorder = "1.5"
-quick-xml = { version = "0.31", features = ["serialize"] }
-serde = { version = "1.0", features = ["derive"] }
+quick-xml = { version = "0.31" }
 natord = "1.0"
 indicatif = "0.17"
 anyhow = "1.0"
+encoding_rs = "0.8"
